--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,22 @@
-# Operating System Files
+# OS files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 desktop.ini
 
-# IDE and Editor Files
+# Editor files
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
-.project
-.classpath
-.settings/
-
-# Logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Environment Variables
-.env
-.env.local
-.env.*.local
-
-# Dependencies
-node_modules/
-package-lock.json
-yarn.lock
-
-# Build outputs
-dist/
-build/
-*.min.js
-*.min.css
 
 # Temporary files
 *.tmp
-*.temp
-.cache/
+*.log
 
+# Node modules (if any)
+node_modules/
+
+# Build files
+dist/
+build/
